--- a/package.json
+++ b/package.json
@@ -1,42 +1,31 @@
 {
-  "name": "@soundworks/service-platform",
-  "version": "0.0.1-alpha.3",
-  "description": "platform service for the soundworks framework",
+  "name": "@soundworks/plugin-platform",
+  "version": "1.0.0",
+  "description": "platform plugin for the soundworks framework",
   "authors": [
     "Benjamin Matuszewski"
   ],
+  "private": true,
   "license": "BSD-3-Clause",
+  "scripts": {
+    "clean": "rm -Rf client && rm -Rf server",
+    "prepublishOnly": "npm run build",
+    "build": "npm run clean && babel src --out-dir .",
+    "dev": "npm run build && chokidar src/ -c \"babel src --out-dir .\""
+  },
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/collective-soundworks/soundworks-service-platform"
+    "url": "https://github.com/collective-soundworks/soundworks-plugin-platform"
   },
-  "scripts": {
-    "clean": "rm -Rf client && rm -Rf server",
-    "deploy": "np --yolo",
-    "doc": "jsdoc -c jsdoc.json",
-    "prepublishOnly": "npm run clean && npm run transpile",
-    "version": "npm run clean && npm run transpile && npm run doc && git add docs",
-    "transpile:client": "babel src/client --out-dir client",
-    "transpile:server": "babel src/server --out-dir server",
-    "transpile": "npm run transpile:server && npm run transpile:client",
-    "watch:client": "chokidar src/client/ -c \"npm run transpile:client\"",
-    "watch:server": "chokidar src/server/ -c \"npm run transpile:server\"",
-    "watch": "npm run clean && npm run transpile && concurrently \"npm run watch:client\" \"npm run watch:server\""
-  },
-  "dependencies": {
-    "mobile-detect": "^1.3.7",
-    "nosleep.js": "^0.9.0",
-    "screenfull": "^4.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "chokidar": "^3.0.1",
-    "chokidar-cli": "^1.2.2",
-    "concurrently": "^4.1.0"
+    "chokidar": "^3.2.2",
+    "chokidar-cli": "^2.0.0"
   }
 }
