--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "clean": "rm -Rf client && rm -Rf server",
+    "toc": "markdown-toc -i README.md",
     "prepublishOnly": "npm run build",
     "build": "npm run clean && babel src --out-dir .",
     "dev": "npm run build && chokidar src/ -c \"babel src --out-dir .\""
@@ -20,7 +21,9 @@
     "type": "git",
     "url": "https://github.com/collective-soundworks/soundworks-plugin-platform"
   },
-  "dependencies": {},
+  "dependencies": {
+    "markdown-toc": "^1.2.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
