--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "toc": "markdown-toc -i README.md",
     "prepublishOnly": "npm run build",
     "build": "npm run toc && npm run clean && babel src --out-dir .",
-    "dev": "npm run build && chokidar src/ -c \"babel src --out-dir .\""
+    "dev": "npm run build && chokidar src/ -c \"babel src --out-dir .\"",
+    "test": "mocha"
   },
   "publishConfig": {
     "access": "public"
@@ -21,6 +22,7 @@
     "url": "https://github.com/collective-soundworks/soundworks-plugin-platform"
   },
   "dependencies": {
+    "is-plain-obj": "^3.0.0",
     "mobile-detect": "^1.3.7",
     "nosleep.js": "^0.11.0"
   },
@@ -28,8 +30,11 @@
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
+    "chai": "^4.3.6",
     "chokidar": "^3.2.2",
     "chokidar-cli": "^2.0.0",
-    "markdown-toc": "^1.2.0"
+    "markdown-toc": "^1.2.0",
+    "mocha": "^10.1.0",
+    "puppeteer": "^19.2.0"
   }
 }
