--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
   "name": "@soundworks/plugin-platform",
   "version": "1.0.3",
-  "description": "soundworks plugin for simplifying initialization of clients",
+  "description": "soundworks plugin for initializing client features that require a user gesture",
   "authors": [
     "Benjamin Matuszewski"
   ],
   "license": "BSD-3-Clause",
   "scripts": {
-    "clean": "rm -Rf client && rm -Rf server",
-    "toc": "markdown-toc -i README.md",
-    "prepublishOnly": "npm run build",
-    "build": "npm run toc && npm run clean && babel src --out-dir .",
-    "dev": "npm run build && chokidar src/ -c \"babel src --out-dir .\"",
-    "test": "mocha"
+    "lint": "npx eslint src && npx eslint tests",
+    "test": "mocha tests/features.spec.js",
+    "toc": "markdown-toc -i README.md"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "type": "module",
+  "exports": {
+    "./client.js": "./src/client/plugin-platform.js",
+    "./server.js": "./src/server/plugin-platform.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/collective-soundworks/soundworks-plugin-platform"
   },
+  "bugs": {
+    "url": "https://github.com/collective-soundworks/soundworks-plugin-platform/issues"
+  },
+  "homepage": "https://github.com/collective-soundworks/soundworks-plugin-platform#readme",
   "dependencies": {
     "is-plain-obj": "^3.0.0",
     "mobile-detect": "^1.3.7",
     "nosleep.js": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "chai": "^4.3.6",
-    "chokidar": "^3.2.2",
-    "chokidar-cli": "^2.0.0",
+    "@ircam/eslint-config": "^1.1.0",
     "markdown-toc": "^1.2.0",
     "mocha": "^10.1.0",
     "puppeteer": "^19.2.0"
