--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@soundworks/plugin-platform",
-  "version": "1.0.3",
-  "description": "soundworks plugin for initializing client features that require a user gesture",
+  "name": "@soundworks/plugin-init",
+  "version": "0.0.0",
+  "description": "soundworks plugin to simplify clients initialization",
   "authors": [
     "Benjamin Matuszewski"
   ],
@@ -16,17 +16,17 @@
   },
   "type": "module",
   "exports": {
-    "./client.js": "./src/client/plugin-platform.js",
-    "./server.js": "./src/server/plugin-platform.js"
+    "./client.js": "./src/client/plugin-init.js",
+    "./server.js": "./src/server/plugin-init.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/collective-soundworks/soundworks-plugin-platform"
+    "url": "https://github.com/collective-soundworks/soundworks-plugin-init"
   },
   "bugs": {
-    "url": "https://github.com/collective-soundworks/soundworks-plugin-platform/issues"
+    "url": "https://github.com/collective-soundworks/soundworks-plugin-init/issues"
   },
-  "homepage": "https://github.com/collective-soundworks/soundworks-plugin-platform#readme",
+  "homepage": "https://github.com/collective-soundworks/soundworks-plugin-init#readme",
   "dependencies": {
     "is-plain-obj": "^3.0.0",
     "mobile-detect": "^1.3.7",
