--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@soundworks/plugin-init",
+  "name": "@soundworks/plugin-platform-init",
   "version": "0.0.0",
-  "description": "soundworks plugin to simplify clients initialization",
+  "description": "soundworks plugin to simplify initialization of certain client features ",
   "authors": [
     "Benjamin Matuszewski"
   ],
