--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@soundworks/plugin-platform-init",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "soundworks plugin to simplify initialization of certain client features ",
   "authors": [
     "Benjamin Matuszewski"
