--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   ],
   "license": "BSD-3-Clause",
   "scripts": {
+    "api": "jsdoc-to-readme --src src/*.js",
+    "prepublishOnly": "npm run api && npm run toc",
     "lint": "npx eslint src && npx eslint tests",
     "test": "mocha tests/features.spec.js",
-    "toc": "markdown-toc -i README.md"
+    "toc": "markdown-toc -i README.md --maxdepth 3"
   },
   "publishConfig": {
     "access": "public"
@@ -29,6 +31,7 @@
   "homepage": "https://github.com/collective-soundworks/soundworks-plugin-platform-init#readme",
   "dependencies": {
     "@ircam/sc-utils": "^1.0.1",
+    "jsdoc-to-readme": "^1.1.0",
     "lit": "^2.7.5",
     "mobile-detect": "^1.3.7",
     "nosleep.js": "^0.11.0"
