--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "api": "jsdoc-to-readme --src src/*.js",
-    "prepublishOnly": "npm run api && npm run toc",
+    "preversion": "npm run api && npm run toc",
     "lint": "npx eslint src && npx eslint tests",
     "test": "mocha tests/features.spec.js",
     "toc": "markdown-toc -i README.md --maxdepth 3"
