--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "api": "jsdoc-to-readme --src src/*.js",
-    "preversion": "npm run api && npm run toc && git commit -am 'docs: build' --allow-empty",
+    "preversion": "npm run lint && npm run test && npm run api && npm run toc && git commit -am 'docs: build' --allow-empty",
     "lint": "npx eslint src && npx eslint tests",
     "test": "mocha tests/features.spec.js",
     "toc": "markdown-toc -i README.md --maxdepth 3"
@@ -30,16 +30,19 @@
   },
   "homepage": "https://soundworks.dev",
   "dependencies": {
-    "@ircam/sc-utils": "^1.0.1",
-    "lit": "^2.7.5",
+    "@ircam/sc-utils": "^1.9.0",
+    "lit": "^3.2.1",
     "mobile-detect": "^1.3.7",
-    "nosleep.js": "^0.11.0"
+    "nosleep.js": "^0.12.0"
   },
   "devDependencies": {
-    "@ircam/eslint-config": "^1.1.0",
-    "jsdoc-to-readme": "^1.1.0",
+    "@ircam/eslint-config": "^2.0.1",
+    "jsdoc-to-readme": "^2.0.2",
     "markdown-toc": "^1.2.0",
-    "mocha": "^10.1.0",
-    "puppeteer": "^19.2.0"
+    "mocha": "^11.1.0",
+    "puppeteer": "^24.1.0"
+  },
+  "peerDependencies": {
+    "@soundworks/core": "^4.0.0-alpha.5"
   }
 }
