--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "license": "BSD-3-Clause",
   "type": "module",
   "exports": {
-    "./client.js": "./src/PluginPlatformInitClient.js",
-    "./server.js": "./src/PluginPlatformInitServer.js"
+    "./client.js": "./src/ClientPluginPlatformInit.js",
+    "./server.js": "./src/ServerPluginPlatformInit.js"
   },
   "scripts": {
     "api": "jsdoc-to-readme --src src/*.js",
     "preversion": "npm run lint && npm run test && npm run api && npm run toc && git commit -am 'docs: build' --allow-empty",
-    "lint": "npx eslint src && npx eslint tests",
+    "lint": "npx eslint src",
     "test": "mocha tests/features.spec.js",
     "toc": "markdown-toc -i README.md --maxdepth 3"
   },
