--- a/tests/features/.gitignore
+++ b/tests/features/.gitignore
@@ -1,11 +1,10 @@
-# transpiled files and dependencies
+# build files and dependencies
 /node_modules
-# application build files
 .build
 .data
 
-# ignore all environement config files
-/config/env/*
+# ignore all environment config files
+/config/env-*
 
 # junk files
 package-lock.json
