--- a/package.json
+++ b/package.json
@@ -8,15 +8,24 @@
   "license": "BSD-3-Clause",
   "type": "module",
   "exports": {
-    "./client.js": "./src/ClientPluginPlatformInit.js",
-    "./server.js": "./src/ServerPluginPlatformInit.js"
+    "./client.js": {
+      "module": "./src/ClientPluginPlatformInit.browser.js",
+      "node": "./src/ClientPluginPlatformInit.node.js",
+      "types": "./types/ClientPluginPlatformInit.d.ts"
+    },
+    "./server.js": {
+      "module": "./src/ServerPluginPlatformInit.js",
+      "node": "./src/ServerPluginPlatformInit.js",
+      "types": "./types/ServerPluginPlatformInit.d.ts"
+    }
   },
   "scripts": {
     "api": "jsdoc-to-readme --src src/*.js",
     "preversion": "npm run lint && npm run test && npm run api && npm run toc && git commit -am 'docs: build' --allow-empty",
     "lint": "npx eslint src",
-    "test": "mocha tests/features.spec.js",
-    "toc": "markdown-toc -i README.md --maxdepth 3"
+    "test": "mocha tests/*.spec.js",
+    "test:only": "mocha",
+    "toc": "markdown-toc -i README.md --maxdepth 2"
   },
   "publishConfig": {
     "access": "public"
@@ -36,6 +45,7 @@
   },
   "devDependencies": {
     "@ircam/eslint-config": "^2.0.1",
+    "chai": "^5.1.2",
     "jsdoc-to-readme": "^2.0.2",
     "markdown-toc": "^1.2.0",
     "mocha": "^11.1.0",
