--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "./client.js": {
       "module": "./src/ClientPluginPlatformInit.browser.js",
       "node": "./src/ClientPluginPlatformInit.node.js",
-      "types": "./types/ClientPluginPlatformInit.d.ts"
+      "types": "./types/ClientPluginPlatformInit.browser.d.ts"
     },
     "./server.js": {
       "module": "./src/ServerPluginPlatformInit.js",
@@ -20,12 +20,13 @@
     }
   },
   "scripts": {
-    "api": "jsdoc-to-readme --src src/*.js",
+    "api": "npm run types && jsdoc-to-readme --src src/*.js",
     "preversion": "npm run lint && npm run test && npm run api && npm run toc && git commit -am 'docs: build' --allow-empty",
     "lint": "npx eslint src",
     "test": "mocha tests/*.spec.js",
     "test:only": "mocha",
-    "toc": "markdown-toc -i README.md --maxdepth 2"
+    "toc": "markdown-toc -i README.md --maxdepth 2",
+    "types": "rm -rf types && tsc"
   },
   "publishConfig": {
     "access": "public"
@@ -49,9 +50,10 @@
     "jsdoc-to-readme": "^2.0.2",
     "markdown-toc": "^1.2.0",
     "mocha": "^11.1.0",
-    "puppeteer": "^24.1.0"
+    "puppeteer": "^24.1.0",
+    "typescript": "^5.7.3"
   },
   "peerDependencies": {
-    "@soundworks/core": "^4.0.0-alpha.5"
+    "@soundworks/core": "^5.0.0"
   }
 }
